// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-observability - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Monitor Azure applications and infrastructure using Azure Monitor, Application Insights, Log Analytics, Alerts, and Workbooks. Query metrics, analyze logs with KQL, configure alert rules, set up dashboards, and troubleshoot performance. USE FOR: monitor my app, set up Azure Monitor, configure Application Insights, query logs with KQL, create alert rules, build monitoring dashboards, analyze metrics, view distributed traces, set up observability, check application performance. DO NOT USE FOR: instrumenting apps with App Insights SDK code (use appinsights-instrumentation), querying Kusto/ADX clusters (use azure-kusto), cost analysis (use azure-cost-optimization).",
  "extractedKeywords": [
    "alert",
    "alerts",
    "analysis",
    "analytics",
    "analyze",
    "appinsights-instrumentation",
    "application",
    "applications",
    "apps",
    "azure",
    "azure-cost-optimization",
    "azure-kusto",
    "build",
    "check",
    "cli",
    "clusters",
    "code",
    "configure",
    "cost",
    "create",
    "dashboards",
    "distributed",
    "infrastructure",
    "insights",
    "instrumenting",
    "kusto",
    "logs",
    "mcp",
    "metrics",
    "monitor",
    "monitoring",
    "observability",
    "performance",
    "query",
    "querying",
    "rules",
    "security",
    "traces",
    "troubleshoot",
    "using",
    "view",
    "with",
    "workbooks",
  ],
  "name": "azure-observability",
}
`;

exports[`azure-observability - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "alert",
  "alerts",
  "analysis",
  "analytics",
  "analyze",
  "appinsights-instrumentation",
  "application",
  "applications",
  "apps",
  "azure",
  "azure-cost-optimization",
  "azure-kusto",
  "build",
  "check",
  "cli",
  "clusters",
  "code",
  "configure",
  "cost",
  "create",
  "dashboards",
  "distributed",
  "infrastructure",
  "insights",
  "instrumenting",
  "kusto",
  "logs",
  "mcp",
  "metrics",
  "monitor",
  "monitoring",
  "observability",
  "performance",
  "query",
  "querying",
  "rules",
  "security",
  "traces",
  "troubleshoot",
  "using",
  "view",
  "with",
  "workbooks",
]
`;
